# LDMicroGtk

./: .gitignore  CMakeLists.txt  LDMicro-linux-Workspace.code-workspace  Makefile  README.md  draw_outputdev.cpp  ldmicro.cpp  miscutil.cpp
common/linux/: freeze.cpp  freeze.h
help/: sample-gtk.cpp
include/: ldmicro.h
ldmicro/: CMakeLists.txt  CMakeLists_gtk.txt  circuit.cpp  coildialog.cpp  commentdialog.cpp  compilecommon.cpp  componentimages.cpp  componentlist.cpp  confdialog.cpp  contactsdialog.cpp  draw.cpp  draw_outputdev.cpp  helpdialog.cpp  iolist.cpp  lang.cpp  ldinterpret.c  ldmicro.cpp  linuxUI.cpp  loadsave.cpp  lutdialog.cpp  maincontrols.cpp  miscutil.cpp  naminglist.cpp  pic16.cpp  resetdialog.cpp  schematic.cpp  simpledialog.cpp  simulate.cpp  undoredo.cpp  windows.cpp
ldmicro/includes/: advanceddialog.h  ldmicro.h  windows.h
ldmicro/includes/linuxUI/: linuxLD.h  linuxUI.h
ldmicro/lib/freezeLD/: freezeLD.cpp  freezeLD.h
ldmicro/lib/linuxUI/: CMakeLists.txt  linuxLD.cpp  linuxLD.h  linuxUI.cpp  linuxUI.h
ldmicro/reg/: t.pl
test/: LDMicro
